nearly implemented timeSVD++.
NaNing for some reason. need to check data reading and all other places where this could be occuring.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
 ## Our own gitignores:
-# data
+# all the data
 data/
+
+# large code generated files
+gen/
+
 # executables and object files
 bin/
 obj/
+
 # DS store
 .DS_store
 
